developer/src/kmc-kmn/test/fixtures/invalid-keyboards/error_contextex_has_invalid_offset_nul.kmn
store(&TARGETS) 'any'

begin Unicode > use(main)

store(cons) 'bcd'
store(ifx) '1'

group(main) using keys

c ERROR_ContextExHasInvalidOffset: `context(3)` should be `context(2)`
nul any(cons) + 'a' > 'x' context(3) 'z'

